--- a/docker/elk/elasticsearch.yml
+++ b/docker/elk/elasticsearch.yml
@@ -5,8 +5,9 @@ cluster.name: docker-cluster
 node.name: node-1
 network.host: 0.0.0.0
 
-# Use single node discovery in order to disable production mode and avoid bootstrap checks
-# see https://www.elastic.co/guide/en/elasticsearch/reference/current/bootstrap-checks.html
+## Use single node discovery in order to disable production mode and avoid bootstrap checks
+## see https://www.elastic.co/guide/en/elasticsearch/reference/current/bootstrap-checks.html
+#
 discovery.type: single-node
 
 ## X-Pack settings
