--- a/docker-compose-elk.yml
+++ b/docker-compose-elk.yml
@@ -2,13 +2,11 @@ version: "3"
 
 services:
   elasticsearch:
-    image: docker.elastic.co/elasticsearch/elasticsearch:7.6.2
+    image: elasticsearch:7.17.10
     container_name: elasticsearch
     environment:
       ES_JAVA_OPTS: "-Xmx256m -Xms256m"
       ELASTIC_PASSWORD: search
-      # Use single node discovery in order to disable production mode and avoid bootstrap checks
-      # see https://www.elastic.co/guide/en/elasticsearch/reference/current/bootstrap-checks.html
     ports:
       - 9200:9200
     volumes:
@@ -18,7 +16,7 @@ services:
         read_only: true
 
   kibana:
-    image: docker.elastic.co/kibana/kibana:7.6.2
+    image: kibana:7.17.10
     container_name: kibana
     depends_on:
       - elasticsearch
