--- a/docker-compose-spark.yml
+++ b/docker-compose-spark.yml
@@ -4,16 +4,18 @@ services:
   spark-master:
     image: apache/spark:3.4.1-scala2.12-java11-python3-r-ubuntu
     container_name: spark-master
-    ports:
-      - 8080:8080
-      - 7077:7077
+    command: /opt/spark/bin/spark-class org.apache.spark.deploy.master.Master -h spark-master
     environment:
       - SPARK_MASTER_PORT=7077
       - SPARK_MASTER_WEBUI_PORT=8080
+    ports:
+      - 8080:8080
+      - 7077:7077
 
   spark-worker-1:
     image: apache/spark:3.4.1-scala2.12-java11-python3-r-ubuntu
     container_name: spark-worker-1
+    command: /opt/spark/bin/spark-class org.apache.spark.deploy.worker.Worker spark://spark-master:7077
     environment:
       - SPARK_WORKER_PORT=8881
       - SPARK_WORKER_WEBUI_PORT=8081
@@ -25,6 +27,7 @@ services:
   spark-worker-2:
     image: apache/spark:3.4.1-scala2.12-java11-python3-r-ubuntu
     container_name: spark-worker-2
+    command: /opt/spark/bin/spark-class org.apache.spark.deploy.worker.Worker spark://spark-master:7077
     environment:
       - SPARK_WORKER_PORT=8881
       - SPARK_WORKER_WEBUI_PORT=8081
@@ -36,6 +39,7 @@ services:
   spark-worker-3:
     image: apache/spark:3.4.1-scala2.12-java11-python3-r-ubuntu
     container_name: spark-worker-3
+    command: /opt/spark/bin/spark-class org.apache.spark.deploy.worker.Worker spark://spark-master:7077
     environment:
       - SPARK_WORKER_PORT=8881
       - SPARK_WORKER_WEBUI_PORT=8081
@@ -47,9 +51,11 @@ services:
   spark-history-server:
     image: apache/spark:3.4.1-scala2.12-java11-python3-r-ubuntu
     container_name: spark-history-server
+    command: /opt/spark/bin/spark-class org.apache.spark.deploy.history.HistoryServer
     ports:
       - 18080:18080
-    command: ["history-server"]
+    volumes:
+      - ~/spark-logs:/tmp/spark-events
     depends_on:
       - spark-master
 
