--- a/docker-compose-spark.yml
+++ b/docker-compose-spark.yml
@@ -2,7 +2,7 @@ version: '3.8'
 
 services:
   spark-master:
-    image: apache/spark:3.4.1-scala2.12-java11-python3-r-ubuntu
+    image: apache/spark:3.4.1-python3
     container_name: spark-master
     command: /opt/spark/bin/spark-class org.apache.spark.deploy.master.Master -h spark-master
     environment:
@@ -13,7 +13,7 @@ services:
       - 7077:7077
 
   spark-worker-1:
-    image: apache/spark:3.4.1-scala2.12-java11-python3-r-ubuntu
+    image: apache/spark:3.4.1-python3
     container_name: spark-worker-1
     command: /opt/spark/bin/spark-class org.apache.spark.deploy.worker.Worker spark://spark-master:7077
     environment:
@@ -25,7 +25,7 @@ services:
       - spark-master
 
   spark-worker-2:
-    image: apache/spark:3.4.1-scala2.12-java11-python3-r-ubuntu
+    image: apache/spark:3.4.1-python3
     container_name: spark-worker-2
     command: /opt/spark/bin/spark-class org.apache.spark.deploy.worker.Worker spark://spark-master:7077
     environment:
@@ -37,7 +37,7 @@ services:
       - spark-master
 
   spark-worker-3:
-    image: apache/spark:3.4.1-scala2.12-java11-python3-r-ubuntu
+    image: apache/spark:3.4.1-python3
     container_name: spark-worker-3
     command: /opt/spark/bin/spark-class org.apache.spark.deploy.worker.Worker spark://spark-master:7077
     environment:
@@ -49,21 +49,13 @@ services:
       - spark-master
 
   spark-history-server:
-    image: apache/spark:3.4.1-scala2.12-java11-python3-r-ubuntu
+    image: apache/spark:3.4.1-python3
     container_name: spark-history-server
     command: /opt/spark/bin/spark-class org.apache.spark.deploy.history.HistoryServer
     ports:
       - 18080:18080
     volumes:
       - ~/spark-logs:/tmp/spark-events
-    depends_on:
-      - spark-master
-
-  jupyterlab:
-    image: jupyter/pyspark-notebook
-    container_name: jupyterlab
-    ports:
-      - 8888:8888
     depends_on:
       - spark-master
 
