--- a/docker-compose-spark.yml
+++ b/docker-compose-spark.yml
@@ -11,6 +11,11 @@ services:
     ports:
       - 8080:8080
       - 7077:7077
+    healthcheck:
+      test: ["CMD", "curl", "-f", "http://spark-master:8080/"]
+      interval: 30s
+      timeout: 10s
+      retries: 3
 
   spark-worker-1:
     image: apache/spark:3.4.1-python3
