--- a/docker-compose-spark.yml
+++ b/docker-compose-spark.yml
@@ -4,13 +4,13 @@ services:
   spark-master:
     image: apache/spark:3.4.1-python3
     container_name: spark-master
-    command: /opt/spark/bin/spark-class org.apache.spark.deploy.master.Master -h spark-master
     environment:
       - SPARK_MASTER_PORT=7077
       - SPARK_MASTER_WEBUI_PORT=8080
     ports:
       - 8080:8080
       - 7077:7077
+    command: /opt/spark/bin/spark-class org.apache.spark.deploy.master.Master -h spark-master
     healthcheck:
       test: ["CMD", "curl", "-f", "http://spark-master:8080/"]
       interval: 30s
@@ -20,49 +20,53 @@ services:
   spark-worker-1:
     image: apache/spark:3.4.1-python3
     container_name: spark-worker-1
-    command: /opt/spark/bin/spark-class org.apache.spark.deploy.worker.Worker spark://spark-master:7077
+    depends_on:
+      spark-master:
+        condition: service_healthy
     environment:
       - SPARK_WORKER_PORT=8881
       - SPARK_WORKER_WEBUI_PORT=8081
     ports:
       - 8081:8081
-    depends_on:
-      - spark-master
+    command: /opt/spark/bin/spark-class org.apache.spark.deploy.worker.Worker spark://spark-master:7077
 
   spark-worker-2:
     image: apache/spark:3.4.1-python3
     container_name: spark-worker-2
-    command: /opt/spark/bin/spark-class org.apache.spark.deploy.worker.Worker spark://spark-master:7077
+    depends_on:
+      spark-master:
+        condition: service_healthy
     environment:
       - SPARK_WORKER_PORT=8881
       - SPARK_WORKER_WEBUI_PORT=8081
     ports:
       - 8082:8081
-    depends_on:
-      - spark-master
+    command: /opt/spark/bin/spark-class org.apache.spark.deploy.worker.Worker spark://spark-master:7077
 
   spark-worker-3:
     image: apache/spark:3.4.1-python3
     container_name: spark-worker-3
-    command: /opt/spark/bin/spark-class org.apache.spark.deploy.worker.Worker spark://spark-master:7077
+    depends_on:
+      spark-master:
+        condition: service_healthy
     environment:
       - SPARK_WORKER_PORT=8881
       - SPARK_WORKER_WEBUI_PORT=8081
     ports:
       - 8083:8081
-    depends_on:
-      - spark-master
+    command: /opt/spark/bin/spark-class org.apache.spark.deploy.worker.Worker spark://spark-master:7077
 
   spark-history-server:
     image: apache/spark:3.4.1-python3
     container_name: spark-history-server
-    command: /opt/spark/bin/spark-class org.apache.spark.deploy.history.HistoryServer
+    depends_on:
+      spark-master:
+        condition: service_healthy
     ports:
       - 18080:18080
+    command: /opt/spark/bin/spark-class org.apache.spark.deploy.history.HistoryServer
     volumes:
       - ~/spark-logs:/tmp/spark-events
-    depends_on:
-      - spark-master
 
 networks:
   default:
