--- a/docker-compose-spark.yml
+++ b/docker-compose-spark.yml
@@ -16,6 +16,8 @@ services:
       interval: 30s
       timeout: 10s
       retries: 3
+    volumes:
+      - ./logs/spark-master:/spark/logs
 
   spark-worker-1:
     image: apache/spark:3.4.1-python3
