--- a/docker-compose-spark.yml
+++ b/docker-compose-spark.yml
@@ -13,11 +13,9 @@ services:
     command: /opt/spark/bin/spark-class org.apache.spark.deploy.master.Master -h spark-master
     healthcheck:
       test: ["CMD", "curl", "-f", "http://spark-master:8080/"]
-      interval: 30s
-      timeout: 10s
-      retries: 3
-    volumes:
-      - ./logs/spark-master:/spark/logs
+      interval: 10s
+      timeout: 5s
+      retries: 5
 
   spark-worker-1:
     image: apache/spark:3.4.1-python3
@@ -64,6 +62,8 @@ services:
     depends_on:
       spark-master:
         condition: service_healthy
+    environment:
+      - SPARK_HISTORY_FS_LOGDIRECTORY=/tmp/spark-events
     ports:
       - 18080:18080
     command: /opt/spark/bin/spark-class org.apache.spark.deploy.history.HistoryServer
