--- a/docker-compose-jupyter.yml
+++ b/docker-compose-jupyter.yml
@@ -21,7 +21,13 @@ services:
 
     tty: true
     stdin_open: true
+    volumes:
+      - minio-data:/data
 
+volumes:
+  minio-data:
+    driver: local
+    
 networks:
   default:
     name: simple-data-flow
