--- a/docker-compose-spark.yml
+++ b/docker-compose-spark.yml
@@ -1,8 +1,20 @@
 version: '3.8'
 
 services:
+  minio:
+    image: minio/minio:RELEASE.2021-04-22T15-44-28Z
+    container_name: minio
+    environment:
+      - MINIO_ACCESS_KEY=minio
+      - MINIO_SECRET_KEY=minio123
+    ports:
+      - 9900:9000
+    volumes:
+      - minio-data:/data
+    command: server /data
+
   spark-master:
-    image: apache/spark:3.4.1-python3
+    image: apache/spark:3.4.0-python3
     container_name: spark-master
     environment:
       - SPARK_MASTER_PORT=7077
@@ -11,6 +23,8 @@ services:
       - 8080:8080
       - 7077:7077
     command: /opt/spark/bin/spark-class org.apache.spark.deploy.master.Master -h spark-master
+    volumes:
+      - minio-data:/data
     healthcheck:
       test: ["CMD", "curl", "-f", "http://spark-master:8080/"]
       interval: 10s
@@ -18,7 +32,7 @@ services:
       retries: 5
 
   spark-worker-1:
-    image: apache/spark:3.4.1-python3
+    image: apache/spark:3.4.0-python3
     container_name: spark-worker-1
     depends_on:
       spark-master:
@@ -26,12 +40,17 @@ services:
     environment:
       - SPARK_WORKER_PORT=8881
       - SPARK_WORKER_WEBUI_PORT=8081
+      - SPARK_WORKER_MEMORY=4G
+      - SPARK_EXECUTOR_MEMORY=4G
+      - SPARK_WORKER_CORES=4
     ports:
       - 8081:8081
     command: /opt/spark/bin/spark-class org.apache.spark.deploy.worker.Worker spark://spark-master:7077
+    volumes:
+      - minio-data:/data
 
   spark-worker-2:
-    image: apache/spark:3.4.1-python3
+    image: apache/spark:3.4.0-python3
     container_name: spark-worker-2
     depends_on:
       spark-master:
@@ -39,12 +58,17 @@ services:
     environment:
       - SPARK_WORKER_PORT=8881
       - SPARK_WORKER_WEBUI_PORT=8081
+      - SPARK_WORKER_MEMORY=4G
+      - SPARK_EXECUTOR_MEMORY=4G
+      - SPARK_WORKER_CORES=4
     ports:
       - 8082:8081
     command: /opt/spark/bin/spark-class org.apache.spark.deploy.worker.Worker spark://spark-master:7077
+    volumes:
+      - minio-data:/data
 
   spark-worker-3:
-    image: apache/spark:3.4.1-python3
+    image: apache/spark:3.4.0-python3
     container_name: spark-worker-3
     depends_on:
       spark-master:
@@ -52,12 +76,17 @@ services:
     environment:
       - SPARK_WORKER_PORT=8881
       - SPARK_WORKER_WEBUI_PORT=8081
+      - SPARK_WORKER_MEMORY=4G
+      - SPARK_EXECUTOR_MEMORY=4G
+      - SPARK_WORKER_CORES=4
     ports:
       - 8083:8081
     command: /opt/spark/bin/spark-class org.apache.spark.deploy.worker.Worker spark://spark-master:7077
+    volumes:
+      - minio-data:/data
 
   spark-history-server:
-    image: apache/spark:3.4.1-python3
+    image: apache/spark:3.4.0-python3
     container_name: spark-history-server
     depends_on:
       spark-master:
@@ -69,6 +98,10 @@ services:
     command: /opt/spark/bin/spark-class org.apache.spark.deploy.history.HistoryServer
     volumes:
       - ./logs/spark-history:/tmp/spark-events
+
+volumes:
+  minio-data:
+    driver: local
 
 networks:
   default:
