feat: update docker compose yamls

--- a/docker-compose-jupyter.yml
+++ b/docker-compose-jupyter.yml
@@ -13,21 +13,16 @@ services:
     - sh
     - -c
     - |
-      pip install ipywidgets ipykernel metakernel py4j pandas && 
-      pip install "IPython<8.0.0" && 
-      pip install pyspark_kernel && 
+      pip install ipywidgets ipykernel metakernel py4j pandas &&
+      pip install "IPython<8.0.0" &&
+      pip install pyspark_kernel &&
       python -m pyspark_kernel.installl --user
       jupyter lab --NotebookApp.token=''
-
     tty: true
     stdin_open: true
     volumes:
-      - minio-data:/data
+      - ./data:/data
 
-volumes:
-  minio-data:
-    driver: local
-    
 networks:
   default:
     name: simple-data-flow
