--- a/docker-compose-spark.yml
+++ b/docker-compose-spark.yml
@@ -1,75 +1,116 @@
-version: '3.8'
-
+version: "3.8"
 services:
   spark-master:
-    image: apache/spark:3.4.1-python3
-    container_name: spark-master
+    build:
+      context: ./src/spark
+      dockerfile: ./Dockerfile
+    container_name: "spark-master"
     environment:
-      - SPARK_MASTER_PORT=7077
-      - SPARK_MASTER_WEBUI_PORT=8080
+      - SPARK_MODE=master
+      - SPARK_LOCAL_IP=spark-master
+      - SPARK_RPC_AUTHENTICATION_ENABLED=no
+      - SPARK_RPC_ENCRYPTION_ENABLED=no
+      - SPARK_LOCAL_STORAGE_ENCRYPTION_ENABLED=no
+      - SPARK_SSL_ENABLED=no
     ports:
-      - 8080:8080
-      - 7077:7077
-    command: /opt/spark/bin/spark-class org.apache.spark.deploy.master.Master -h spark-master
-    healthcheck:
-      test: ["CMD", "curl", "-f", "http://spark-master:8080/"]
-      interval: 10s
-      timeout: 5s
-      retries: 5
+      - "7077:7077"
+      - "8080:8080"
+    volumes:
+      - ./spark/spark-defaults.conf:/opt/bitnami/spark/conf/spark-defaults.conf
+    networks:
+      - spark_network
 
   spark-worker-1:
-    image: apache/spark:3.4.1-python3
-    container_name: spark-worker-1
-    depends_on:
-      spark-master:
-        condition: service_healthy
+    image: docker.io/bitnami/spark:3.3
+    container_name: "spark-worker-1"
     environment:
-      - SPARK_WORKER_PORT=8881
-      - SPARK_WORKER_WEBUI_PORT=8081
-    ports:
-      - 8081:8081
-    command: /opt/spark/bin/spark-class org.apache.spark.deploy.worker.Worker spark://spark-master:7077
+      - SPARK_MODE=worker
+      - SPARK_MASTER_URL=spark://spark-master:7077
+      - SPARK_WORKER_MEMORY=2G
+      - SPARK_WORKER_CORES=1
+      - SPARK_RPC_AUTHENTICATION_ENABLED=no
+      - SPARK_RPC_ENCRYPTION_ENABLED=no
+      - SPARK_LOCAL_STORAGE_ENCRYPTION_ENABLED=no
+      - SPARK_SSL_ENABLED=no
+    networks:
+      - spark_network
 
   spark-worker-2:
-    image: apache/spark:3.4.1-python3
-    container_name: spark-worker-2
-    depends_on:
-      spark-master:
-        condition: service_healthy
+    image: docker.io/bitnami/spark:3.3
+    container_name: "spark-worker-2"
     environment:
-      - SPARK_WORKER_PORT=8881
-      - SPARK_WORKER_WEBUI_PORT=8081
-    ports:
-      - 8082:8081
-    command: /opt/spark/bin/spark-class org.apache.spark.deploy.worker.Worker spark://spark-master:7077
+      - SPARK_MODE=worker
+      - SPARK_MASTER_URL=spark://spark-master:7077
+      - SPARK_WORKER_MEMORY=2G
+      - SPARK_WORKER_CORES=1
+      - SPARK_RPC_AUTHENTICATION_ENABLED=no
+      - SPARK_RPC_ENCRYPTION_ENABLED=no
+      - SPARK_LOCAL_STORAGE_ENCRYPTION_ENABLED=no
+      - SPARK_SSL_ENABLED=no
+    networks:
+      - spark_network
 
-  spark-worker-3:
-    image: apache/spark:3.4.1-python3
-    container_name: spark-worker-3
-    depends_on:
-      spark-master:
-        condition: service_healthy
-    environment:
-      - SPARK_WORKER_PORT=8881
-      - SPARK_WORKER_WEBUI_PORT=8081
+  minio:
+    hostname: minio
+    image: "minio/minio"
+    container_name: minio
     ports:
-      - 8083:8081
-    command: /opt/spark/bin/spark-class org.apache.spark.deploy.worker.Worker spark://spark-master:7077
-
-  spark-history-server:
-    image: apache/spark:3.4.1-python3
-    container_name: spark-history-server
-    depends_on:
-      spark-master:
-        condition: service_healthy
-    environment:
-      - SPARK_HISTORY_FS_LOGDIRECTORY=/tmp/spark-events
-    ports:
-      - 18080:18080
-    command: /opt/spark/bin/spark-class org.apache.spark.deploy.history.HistoryServer
+      - "9001:9001"
+      - "9000:9000"
+    command: [ "server", "/data", "--console-address", ":9001" ]
     volumes:
-      - ./logs/spark-history:/tmp/spark-events
+      - ./minio:/data
+    environment:
+      - MINIO_ROOT_USER=minio
+      - MINIO_ROOT_PASSWORD=minio123
+      - MINIO_ACCESS_KEY=minio
+      - MINIO_SECRET_KEY=minio123
+    networks:
+      - spark_network
+
+  mc:
+    image: minio/mc
+    container_name: mc
+    hostname: mc
+    environment:
+      - AWS_ACCESS_KEY_ID=minio
+      - AWS_SECRET_ACCESS_KEY=minio123
+      - AWS_REGION=us-east-1
+    entrypoint: >
+      /bin/sh -c " until (/usr/bin/mc config host add minio http://minio:9000 minio minio123) do echo '...waiting...' && sleep 1; done; /usr/bin/mc mb minio/warehouse; /usr/bin/mc policy set public minio/warehouse; exit 0; "
+    depends_on:
+      - minio
+    networks:
+      - spark_network
+
+  spark-notebook:
+    build:
+      context: ./src/notebooks
+      dockerfile: ./Dockerfile
+    container_name: "spark-notebook"
+    user: root
+    environment:
+      - JUPYTER_ENABLE_LAB="yes"
+      - GRANT_SUDO="yes"
+    volumes:
+      - ./src/notebooks:/home/jovyan/work
+      - ./src/notebooks/spark-defaults.conf:/usr/local/spark/conf/spark-defaults.conf
+    ports:
+      - 8889:8888
+      - 4040:4040
+    networks:
+      - spark_network
+    command:
+    - sh
+    - -c
+    - |
+      pip install ipywidgets ipykernel metakernel py4j pandas &&
+      pip install "IPython<8.0.0" &&
+      jupyter lab --NotebookApp.token='' --allow-root
+    tty: true
+    stdin_open: true
 
 networks:
-  default:
-    name: simple-data-flow
+  spark_network:
+    driver: bridge
+    name: spark_network
