--- a/docker-compose-spark.yml
+++ b/docker-compose-spark.yml
@@ -1,10 +1,9 @@
 version: "3.8"
+
 services:
   spark-master:
-    build:
-      context: ./src/spark
-      dockerfile: ./Dockerfile
-    container_name: "spark-master"
+    build: ./docker/spark/master
+    container_name: spark-master
     environment:
       - SPARK_MODE=master
       - SPARK_LOCAL_IP=spark-master
@@ -13,104 +12,94 @@ services:
       - SPARK_LOCAL_STORAGE_ENCRYPTION_ENABLED=no
       - SPARK_SSL_ENABLED=no
     ports:
-      - "7077:7077"
-      - "8080:8080"
+      - 7078:7077
+      - 8081:8080
     volumes:
-      - ./spark/spark-defaults.conf:/opt/bitnami/spark/conf/spark-defaults.conf
-    networks:
-      - spark_network
+      - ./docker/spark/spark-defaults.conf:/opt/bitnami/spark/conf/spark-defaults.conf
 
   spark-worker-1:
-    image: docker.io/bitnami/spark:3.3
-    container_name: "spark-worker-1"
+    image: bitnami/spark:3.3.3
+    container_name: spark-worker-1
     environment:
       - SPARK_MODE=worker
       - SPARK_MASTER_URL=spark://spark-master:7077
-      - SPARK_WORKER_MEMORY=2G
+      - SPARK_WORKER_MEMORY=4G
       - SPARK_WORKER_CORES=1
       - SPARK_RPC_AUTHENTICATION_ENABLED=no
       - SPARK_RPC_ENCRYPTION_ENABLED=no
       - SPARK_LOCAL_STORAGE_ENCRYPTION_ENABLED=no
       - SPARK_SSL_ENABLED=no
-    networks:
-      - spark_network
 
   spark-worker-2:
-    image: docker.io/bitnami/spark:3.3
-    container_name: "spark-worker-2"
+    image: bitnami/spark:3.3.3
+    container_name: spark-worker-2
     environment:
       - SPARK_MODE=worker
       - SPARK_MASTER_URL=spark://spark-master:7077
-      - SPARK_WORKER_MEMORY=2G
+      - SPARK_WORKER_MEMORY=4G
       - SPARK_WORKER_CORES=1
       - SPARK_RPC_AUTHENTICATION_ENABLED=no
       - SPARK_RPC_ENCRYPTION_ENABLED=no
       - SPARK_LOCAL_STORAGE_ENCRYPTION_ENABLED=no
       - SPARK_SSL_ENABLED=no
-    networks:
-      - spark_network
 
-  minio:
-    hostname: minio
-    image: "minio/minio"
-    container_name: minio
-    ports:
-      - "9001:9001"
-      - "9000:9000"
-    command: [ "server", "/data", "--console-address", ":9001" ]
-    volumes:
-      - ./minio:/data
+  spark-worker-3:
+    image: bitnami/spark:3.3.3
+    container_name: worker-3
     environment:
-      - MINIO_ROOT_USER=minio
-      - MINIO_ROOT_PASSWORD=minio123
-      - MINIO_ACCESS_KEY=minio
-      - MINIO_SECRET_KEY=minio123
-    networks:
-      - spark_network
-
-  mc:
-    image: minio/mc
-    container_name: mc
-    hostname: mc
-    environment:
-      - AWS_ACCESS_KEY_ID=minio
-      - AWS_SECRET_ACCESS_KEY=minio123
-      - AWS_REGION=us-east-1
-    entrypoint: >
-      /bin/sh -c " until (/usr/bin/mc config host add minio http://minio:9000 minio minio123) do echo '...waiting...' && sleep 1; done; /usr/bin/mc mb minio/warehouse; /usr/bin/mc policy set public minio/warehouse; exit 0; "
-    depends_on:
-      - minio
-    networks:
-      - spark_network
+      - SPARK_MODE=worker
+      - SPARK_MASTER_URL=spark://spark-master:7077
+      - SPARK_WORKER_MEMORY=4G
+      - SPARK_WORKER_CORES=1
+      - SPARK_RPC_AUTHENTICATION_ENABLED=no
+      - SPARK_RPC_ENCRYPTION_ENABLED=no
+      - SPARK_LOCAL_STORAGE_ENCRYPTION_ENABLED=no
+      - SPARK_SSL_ENABLED=no
 
   spark-notebook:
-    build:
-      context: ./src/notebooks
-      dockerfile: ./Dockerfile
-    container_name: "spark-notebook"
-    user: root
+    build: ./docker/spark/notebook
+    container_name: spark-notebook
     environment:
       - JUPYTER_ENABLE_LAB="yes"
       - GRANT_SUDO="yes"
-    volumes:
-      - ./src/notebooks:/home/jovyan/work
-      - ./src/notebooks/spark-defaults.conf:/usr/local/spark/conf/spark-defaults.conf
     ports:
-      - 8889:8888
+      - 8880:8888
       - 4040:4040
-    networks:
-      - spark_network
+    command: jupyter lab --NotebookApp.token='' --allow-root
+    volumes:
+      - ./src:/home/jovyan
+      - ./docker/spark/spark-defaults.conf:/usr/local/spark/conf/spark-defaults.conf
+
+  minio:
+    image: minio/minio:RELEASE.2023-09-07T02-05-02Z
+    container_name: minio
+    environment:
+      - MINIO_ROOT_USER=minio
+      - MINIO_ROOT_PASSWORD=minio123
+    ports:
+      - 9001:9000
+      - 9002:9001
+    command: ["server", "/data", "--console-address", ":9001"]
+    volumes:
+      - ./data:/data
+    healthcheck:
+      test: ["CMD", "curl", "-f", "http://minio:9000/minio/health/live"]
+      interval: 10s
+      timeout: 5s
+      retries: 3
+
+  minio-client:
+    image: minio/mc:RELEASE.2023-09-07T22-48-55Z
+    container_name: minio-client
+    depends_on:
+      minio:
+        condition: service_healthy
+    entrypoint: ["/bin/bash", "-c"]
     command:
-    - sh
-    - -c
-    - |
-      pip install ipywidgets ipykernel metakernel py4j pandas &&
-      pip install "IPython<8.0.0" &&
-      jupyter lab --NotebookApp.token='' --allow-root
-    tty: true
-    stdin_open: true
+      - |
+        /usr/bin/mc config host add minio http://minio:9000 minio minio123 &&
+        /usr/bin/mc mb --ignore-existing minio/data
 
 networks:
-  spark_network:
-    driver: bridge
-    name: spark_network
+  default:
+    name: simple-data-flow
