fix: pip install

--- a/docker/data-generator/Dockerfile
+++ b/docker/data-generator/Dockerfile
@@ -1,10 +1,7 @@
 FROM python:3.10.11-slim
 
-RUN apt-get update \
-    && pip install boto3==1.28.57\
-    && apt-get clean \
-    && rm -rf /var/lib/apt/lists/* \
-    && rm -rf /tmp/*
+RUN pip install --no-cache-dir -U pip \
+    && pip install --no-cache-dir boto3==1.28.57
 
 COPY data data    
 COPY data_generator.py data_generator.py
