--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -70,6 +70,16 @@ services:
       - ./src:/home/jovyan
       - ./docker/spark/spark-defaults.conf:/usr/local/spark/conf/spark-defaults.conf
 
+  spark-livy:
+    build: ./docker/spark/livy
+    container_name: spark-livy
+    environment:
+      - SPARK_HOME=/opt/bitnami/spark
+    command: sh -c /opt/bitnami/livy/bin/livy-server
+    volumes:
+      - ./docker/spark/livy/conf/:/opt/bitnami/livy/conf/
+
+
   minio:
     image: minio/minio:RELEASE.2023-09-07T02-05-02Z
     container_name: minio
